--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"files.associations": {
-		"utility": "cpp"
+		"utility": "cpp",
+		"vector": "cpp",
+		"iterator": "cpp",
+		"__config": "cpp"
 	}
 }
