--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
 		"iterator": "cpp",
 		"__config": "cpp",
 		"__split_buffer": "cpp",
-		"initializer_list": "cpp"
+		"initializer_list": "cpp",
+		"__bit_reference": "cpp"
 	}
 }
