--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,11 @@
 		"__config": "cpp",
 		"__split_buffer": "cpp",
 		"initializer_list": "cpp",
-		"__bit_reference": "cpp"
+		"__bit_reference": "cpp",
+		"__functional_03": "cpp",
+		"__functional_base": "cpp",
+		"functional": "cpp",
+		"memory": "cpp",
+		"tuple": "cpp"
 	}
 }
