--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
 		"__functional_base": "cpp",
 		"functional": "cpp",
 		"memory": "cpp",
-		"tuple": "cpp"
+		"tuple": "cpp",
+		"algorithm": "cpp"
 	}
 }
